Fix bug where password text could overlap with visibility button

--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -74,6 +74,10 @@
    position: relative;
 }
 
+#passwordField {
+   padding-right: 65px;
+}
+
 #pw-toggle {
    position: absolute;
    right: 0px;
